Fix z.indexes of the result list resulting in overlapping, non-visible space picker

--- a/src/in-page-ui/ribbon/react/containers/ribbon-holder/styles.css
+++ b/src/in-page-ui/ribbon/react/containers/ribbon-holder/styles.css
@@ -2,5 +2,5 @@
     position: fixed;
     right: 0;
     top: 0px;
-    z-index: 2147483645;
+    z-index: 2147483646;
 }
